# nlp-app-samples

./: .gitignore  README.md  pyproject.toml  requirements.txt
ai_frame/autograd/: operator_overloading_ad.py  tangent_mode_ad.py  torch_ad.py
conf/: mysql.yaml  pg.yaml
conf_group/: config.yaml
conf_instantiation/: config.yaml
conf_recursive/: config.yaml
nlp_app_samples/: __init__.py  configs.py  constants.py  default_args.py  enums.py  exceptions.py  logger.py  model.py  model_training_bootstrap.py  optimizer.py  version.py
nlp_app_samples/algo/text_cnn/: main.py  model.py
nlp_app_samples/datasources/: base_datasources.py
nlp_app_samples/pipelines/: __init__.py  base_pipeline.py  lr_classification_pipeline.py  mlp_classification_pipeline.py
tests/: demo.py  eval函数.py  main_hydra.py  main_hydra_group.py  test_demo.py  test_nlp_app_samples.py  test_params.py  test_typing_callable.py  使用Hydra实例化对象.py  使用Hydra递归实例化.py
tests/base_python/: README.md  test_progressbar.py  test_tqdm.py
tests/base_python/enums/: test_enum.py
tests/base_python/exceptions/: README.md  exception_exit.py
tests/base_python/file/: read_file.py  read_file_df.py  test_temp.py
tests/datasets/: test_dataset.py  test_similarity.py  test_tnews.py
tests/iter_version_dev/V1_0_0/: README.md  automodel_multilabel.py  bootstrap.py  classification_lr.py  (+22 more)
tests/lightgbm/: train-2.py  train.py
tests/neptune/: demo.py
tests/pandas/: test_read.py
tests/pytorch/: data_prehandle.py  dataloader_dev.py  test_mlp.py
tests/tensorboard/: demo.py
tests/transformer/: README.md  demo.py
(+11 files in other folders)
