[tool.poetry]
name = "nlp-app-samples"
version = "0.1.0"
description = ""
authors = ["李国冬 <liguodongiot@163.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.9.1"
transformers = "^4.11.0"
scikit-learn = "^1.0"
pandas = "^1.3.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
